@@ -71,6 +71,7 @@ extern const AVFilter ff_af_arealtime;
 extern const AVFilter ff_af_aresample;
 extern const AVFilter ff_af_areverse;
 extern const AVFilter ff_af_arnndn;
+extern const AVFilter ff_af_asegment;
 extern const AVFilter ff_af_aselect;
 extern const AVFilter ff_af_asendcmd;
 extern const AVFilter ff_af_asetnsamples;
@@ -385,6 +386,7 @@ extern const AVFilter ff_vf_scale_vulkan;
 extern const AVFilter ff_vf_scale2ref;
 extern const AVFilter ff_vf_scdet;
 extern const AVFilter ff_vf_scroll;
+extern const AVFilter ff_vf_segment;
 extern const AVFilter ff_vf_select;
 extern const AVFilter ff_vf_selectivecolor;
 extern const AVFilter ff_vf_sendcmd;
